--- a/AviaSales/app/src/main/res/values/strings.xml
+++ b/AviaSales/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+
+    <string name="registrationEnterName">Enter your name</string>
+    <string name="registrationEnterEmail">Enter your email</string>
+    <string name="registrationEnterPassword">Enter your password</string>
+    <string name="registration">Registration</string>
+
 </resources>
