create search panel view

--- a/AviaSales/app/src/main/res/values/strings.xml
+++ b/AviaSales/app/src/main/res/values/strings.xml
@@ -18,5 +18,8 @@
     <string name="errorNoConnection">No Internet connection</string>
     <string name="authorisation">Authorization</string>
     <string name="errorCanNotLogin">Can not login</string>
+    <string name="returnFlight">Flight back</string>
+    <string name="city_from">City From</string>
+    <string name="city_to">City To</string>
 
 </resources>
