create custom view mechanism

--- a/AviaSales/app/src/main/res/values/strings.xml
+++ b/AviaSales/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="returnFlight">Flight back</string>
     <string name="city_from">City From</string>
     <string name="city_to">City To</string>
+    <string name="trip_without_transpher">Trips without transpher</string>
 
 </resources>
