add alert with choosw place count

--- a/AviaSales/app/src/main/res/values/strings.xml
+++ b/AviaSales/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="trips_back">Trips back</string>
     <string name="clear">Clear</string>
     <string name="booking_number">Booking №</string>
+    <string name="choose_place_count">Please choose place count</string>
 
 </resources>
