--- a/AviaSales/app/src/main/res/values/strings.xml
+++ b/AviaSales/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="booking_number">Booking №</string>
     <string name="choose_place_count">Please choose place count</string>
     <string name="book_shure">Are you shure you want book this tickets?</string>
+    <string name="search_tickets">Search Tickets</string>
+    <string name="booking_history">Booking History</string>
 
 </resources>
