--- a/AviaSales/app/src/main/res/values/strings.xml
+++ b/AviaSales/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="search_tickets">Search Tickets</string>
     <string name="booking_history">Booking History</string>
     <string name="buy">Book</string>
+    <string name="book_shure_undo">Are you shure you want to undo this book?</string>
 
 </resources>
