create empty view

--- a/AviaSales/app/src/main/res/values/strings.xml
+++ b/AviaSales/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
 
     <string name="choose_date">Choose date</string>
     <string name="ready">Ready</string>
+    <string name="empty_result">Empty result</string>
 
 </resources>
